--- a/index.css
+++ b/index.css
@@ -1,75 +1,7 @@
-.NavBar {
-    display: flex;
-    flex-wrap: wrap;
-    /* border: 2px solid black; */
-    align-items: center;
-    justify-content: space-between;
-}
-.NavBar ul{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    list-style-type: none;
-    /* border: 2px solid black; */
-}
-.NavBar ul li{
-    padding: 3px;
-}
-.NavBar ul li:hover{
-    transition:1000ms;
-    background-color: rgba(147, 138, 138, 0.547);
-    text-decoration:underline;
-    border-radius: 1rem;
-}
-.NavBar  li{
-    margin-left: 3rem;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.NavBar h4{
-    font-style: oblique;
-    font-size: x-large;
-    color: rgb(24, 25, 25);
-}
-.search{
-    display: flex;
-    border: 2px solid black;
-    margin: 0 2rem;
-    margin-right:5rem ;
-    border-radius: 12px;
-    padding: 3px;
-    align-items: center;
-    justify-content: center;
-}
-.search input{
-    border-style: none;
-    margin-left: 0%;
-    font-size: 1rem;
-}
-
-
-.card{
-   width: 18rem;
-   margin: 0 2rem 1rem ;
-}
-.Footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(240, 248, 255, 0.886);
-    padding: 20px;
-}
-.search-icon{
-    font-size: 1rem;
-    margin-top: 3px;
-}
-.imgLogo{
-    width: 3rem;
-    height: 4rem;
-    border-radius: 5rem 5rem 3rem 3rem;
-    padding: 0.4rem;
-}
 .shimmmer-cards{
     width: 18rem;
     margin: 0 2rem 1rem ;
@@ -78,12 +10,7 @@
     background: linear-gradient(180deg,rgba(244, 241, 241, 0.84),rgb(236, 232, 232));
     border-radius: 0.5rem;
 }
-.shimmmer-cards:hover{
-    transition-duration: 0.5s;
-    transition-delay: 0s;
-    padding: 1rem;
-    border: 1px solid rgb(241, 231, 231);
-}
+
 .con{
     display: flex;
     flex-wrap: wrap;
